--- a/LeetCode.vcxproj
+++ b/LeetCode.vcxproj
@@ -89,9 +89,12 @@
     <ClCompile Include="1.cpp" />
     <ClCompile Include="10.cpp" />
     <ClCompile Include="11.cpp" />
+    <ClCompile Include="12.cpp" />
+    <ClCompile Include="13.cpp" />
     <ClCompile Include="2.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="4.cpp" />
+    <ClCompile Include="460.cpp" />
     <ClCompile Include="5.cpp" />
     <ClCompile Include="6.cpp" />
     <ClCompile Include="7.cpp" />
