--- a/LeetCode.vcxproj
+++ b/LeetCode.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="11.cpp" />
     <ClCompile Include="12.cpp" />
     <ClCompile Include="13.cpp" />
+    <ClCompile Include="14.cpp" />
     <ClCompile Include="2.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="4.cpp" />
