--- a/LeetCode.vcxproj.filters
+++ b/LeetCode.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClCompile Include="460.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="14.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
