--- a/LeetCode.vcxproj.filters
+++ b/LeetCode.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClCompile Include="14.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="15.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
