--- a/LeetCode.vcxproj.filters
+++ b/LeetCode.vcxproj.filters
@@ -80,5 +80,8 @@
     <ClCompile Include="15.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="16.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
