--- a/LeetCode.vcxproj
+++ b/LeetCode.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="13.cpp" />
     <ClCompile Include="14.cpp" />
     <ClCompile Include="15.cpp" />
+    <ClCompile Include="16.cpp" />
     <ClCompile Include="2.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="4.cpp" />
