--- a/LeetCode.vcxproj.filters
+++ b/LeetCode.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClCompile Include="16.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="17.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
