--- a/LeetCode.vcxproj
+++ b/LeetCode.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="14.cpp" />
     <ClCompile Include="15.cpp" />
     <ClCompile Include="16.cpp" />
+    <ClCompile Include="17.cpp" />
     <ClCompile Include="2.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="4.cpp" />
